--- a/cv.css
+++ b/cv.css
@@ -14,19 +14,14 @@ header{
     align-items: center;
     color: white;
     flex-direction: column;
-    padding-top: 30px;
 
 }
 
 #photo-de-profil{
     display: flex;
-    border-radius: 50%;
+    border-radius: 80%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-}
-
-#photo-de-profil:hover{
-    transform: scale(1.1);
+    max-width: 200%;
 }
 
 
@@ -42,36 +37,17 @@ header{
     padding-right: 10px;
 }
 
-
 #adresse{
     color: white;
     margin-left: 10px;
-    text-decoration: none;
 }
-
-#adresse:hover{
-    text-decoration: underline;
-}
-
 #ml{
     color: white;
     float: none;
-    text-decoration: none;
-    padding-right: 7%;
 }
-
-#ml:hover{
-    text-decoration: underline;
-}
-
 #tel{
     color: white;
-    margin-right: 20px;
-    text-decoration: none;
-}
-
-#tel:hover{
-    text-decoration: underline;
+    margin-right: 10px;
 }
 
 #page_pr{
@@ -129,21 +105,6 @@ header{
 #flex-row2{
     display: flex;
     flex-direction: row;
-}
-
-#rs1:hover{
-    transition: opacity 0.3s;
-    opacity: 0.7;
-}
-
-#rs2:hover{
-    transition: opacity 0.3s;
-    opacity: 0.7;
-}
-
-#rs3:hover{
-    transition: opacity 0.3s;
-    opacity: 0.7;
 }
 
 
