--- a/cv.css
+++ b/cv.css
@@ -40,14 +40,33 @@ header{
 #adresse{
     color: white;
     margin-left: 10px;
+    text-decoration: none;
 }
+
+#adresse:hover{
+    text-decoration: underline;
+}
+
 #ml{
     color: white;
     float: none;
+    text-decoration: none;
+    padding-right: 7%;
 }
+
+#ml:hover{
+    text-decoration: underline;
+}
+
 #tel{
     color: white;
     margin-right: 10px;
+    text-decoration: none;
+}
+
+#tel:hover{
+    text-decoration: underline;
+
 }
 
 #page_pr{
@@ -105,6 +124,21 @@ header{
 #flex-row2{
     display: flex;
     flex-direction: row;
+}
+
+#rs1:hover{
+    transition: opacity 0.3s;
+    opacity: 0.7;
+}
+
+#rs2:hover{
+    transition: opacity 0.3s;
+    opacity: 0.7;
+}
+
+#rs3:hover{
+    transition: opacity 0.3s;
+    opacity: 0.7;
 }
 
 
